--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,8 +22,9 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+apply plugin: 'kotlin-android'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -60,4 +61,10 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.android.gms:play-services-vision:20.1.2'
+    implementation 'com.google.android.gms:play-services-vision-common:19.1.2'
+    implementation 'com.google.android.gms:play-services-vision-image-label:18.1.0'
+    implementation platform('com.google.firebase:firebase-bom:27.0.0')
+    // api 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'
+    // api 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
 }
