--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:label="flutter_test_camera"
         android:icon="@mipmap/ic_launcher"
         android:requestLegacyExternalStorage="true">
+        <meta-data
+          android:name="com.google.mlkit.vision.DEPENDENCIES"
+          android:value="face" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
