--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   image_picker: ^0.6.7+6
+  image: ^3.0.2
   camera: ^0.5.0
-  path_provider: ^0.5.0
   video_player: ^0.10.0
+  # # Firebase packages
+  firebase_core: ^0.5.3
+  firebase_ml_vision: ^0.11.0+2
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
