--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  image_picker: ^0.6.7+6
+  image_picker: ^0.7.4
   image: ^3.0.2
   camera: ^0.5.0
   video_player: ^0.10.0
-  # # Firebase packages
+  # Firebase packages
   firebase_core: ^0.5.3
   firebase_ml_vision: ^0.11.0+2
   provider: ^5.0.0
+  # Http
+  http: ^0.13.1
+  mime: ^1.0.0
+  loading: ^1.0.2
+  sn_progress_dialog: ^1.0.1
 
 dev_dependencies:
   flutter_test:
