--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   mime: ^1.0.0
   loading: ^1.0.2
   sn_progress_dialog: ^1.0.1
+  tflite: ^1.1.2
+  meta: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +60,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/labels.txt
+    - assets/model_unquant.tflite
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
